Backward compatible changes:

BUGFiXES:
  ZOOKEEPER-957. zkCleanup.sh doesn't do anything (Ted Dunning via mahadev)

Release 3.3.2 - 2010-11-04
Backward compatible changes:

BUGFIXES:
  ZOOKEEPER-783. committedLog in ZKDatabase is not properly synchronized
  (henry via mahadev)

  ZOOKEEPER-790. Last processed zxid set prematurely while establishing 
  leadership (flavio via mahadev)

  ZOOKEEPER-772. zkpython segfaults when watcher from async get children 
  is invoked. (henry robinson via mahadev)

  ZOOKEEPER-795. eventThread isn't shutdown after a connection
  "session expired" event coming (sergey doroshenko via breed)

  ZOOKEEPER-792. zkpython memory leak (Lei Zhang via henryr)

  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a
  server.0 line (phunt and Andrei Savu via breed)

  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a
  server.0 line (part 2) (phunt)

  ZOOKEEPER-846. zookeeper client doesn't shut down cleanly on the close call
  (phunt)
  
  ZOOKEEPER-804. c unit tests failing due to "assertion cptr failed" (michi
  mutsuzaki via mahadev)

  ZOOKEEPER-844. handle auth failure in java client
  (Camille Fournier via phunt)

  ZOOKEEPER-822. Leader election taking a long time to complete
  (Vishal K via phunt)

  ZOOKEEPER-881. ZooKeeperServer.loadData loads database twice
  (Jared Cantwell via fpj)

  ZOOKEEPER-855. clientPortBindAddress should be clientPortAddress
  (Jared Cantwell via fpj)

  ZOOKEEPER-893. ZooKeeper high cpu usage when invalid requests
  (Thijs Terlouw via phunt)

  ZOOKEEPER-804. c unit tests failing due to "assertion cptr failed"
  (second try - Jared Cantwell via phunt)

  ZOOKEEPER-820. update c unit tests to ensure "zombie" java server
  processes don't cause failure (Michi Mutsuzaki via phunt)

  ZOOKEEPER-794. Callbacks are not invoked when the client is closed
  (Alexis Midon via phunt)

  ZOOKEEPER-800. zoo_add_auth returns ZOK if zookeeper handle is in