@@ -3,6 +3,9 @@ Backward compatible changes:
 BUGFiXES:
   ZOOKEEPER-957. zkCleanup.sh doesn't do anything (Ted Dunning via mahadev)
 
+  ZOOKEEPER-888. c-client / zkpython: Double free corruption on node
+  watcher (Austin Shoemaker via henryr)
+
 Release 3.3.2 - 2010-11-04
 Backward compatible changes:
 
